--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -1,3 +1,3 @@
 <h1>Welcome to the To Do List!</h1>
-<a href='/items/new'>Add a new item</a>
-<a href='/items'>See list of items</a>
+<a href='/jobpostings/new'>Add a new item</a>
+<a href='/jobpostings'>See list of items</a>
